--- a/src/main/webapp/css/numguessstyle.css
+++ b/src/main/webapp/css/numguessstyle.css
@@ -6,7 +6,8 @@ version 1.0
 */
 
 body {
-    background-color:floralwhite;
+    background-image: url("http://sweetclipart.com/multisite/sweetclipart/files/sheep_black.png");
+    background-size: 100px;
     font-family: Verdana, Helvetica, Arial, sans-serif;
     line-height: 125%;
     padding: 0;
@@ -16,7 +17,7 @@ body {
 
 h1 {
     font-size: large;
-    background-color: deepskyblue;
+    background-color: dimgrey;
     color: white;
     padding-top: 2em;
     padding-bottom: .2em;
@@ -27,9 +28,9 @@ h1 {
 #tagline p {
     font-style: italic;
     font-family: Georgia, Times, serif;
-    background-color: #bed8f3;
-    border-top: 3px solid #7da5d8;
-    border-bottom: 3px solid #7da5d8;
+    background-color: #cbcccb;
+    border-top: 3px solid #b2b4af;
+    border-bottom: 3px solid #b2b4af;
     padding-top: .2em;
     padding-bottom: .2em;
     padding-left: .8em;
@@ -38,52 +39,93 @@ h1 {
 
 #header {
     position: absolute;
-    border-top: 3px solid #7da5d8;
+    border-top: 3px solid #b2b4af;
     width: 100%;
 }
 
 #navigation {
+
+    /*width: 700px ;*/
+    /*margin-top: 100px;*/
+    /*margin-left: auto ;*/
+    /*margin-right: auto ;*/
+    /*width: 50%;*/
+    /*margin: 0 auto;*/
     position: absolute;
     top: 110px;
-    width: 110px;
-    height: 180px;
-    background-color: navajowhite;
+    width: 200px;
+    height: 300px;
+    background-color: rgba(255, 255, 255, 0.46);
+
     color:black;
     padding-left: .8em;
-;
+
 }
 
 #bodycontent {
+    background-color: rgba(255, 255, 255, 0.46);
     position: absolute;
-    left: 140px;
+    left: 220px;
     top: 120px;
     padding-top:.4em;
     padding-left:2em;
+    color:black;
+    font-weight: bold;
 }
 
 #postcontent {
+    background-color: rgba(255, 255, 255, 0.46);
+
     position: absolute;
-    left: 360px;
+    left: 450px;
     top: 110px;
-    width: 120px;
-    height:180px;
-    background-color: navajowhite;
-    color:black;
+    width: 200px;
+    height:300px;
+
+    color:white;
     padding-left: .8em;
 ;
 }
+
+
+
+
 
 #serverResponse {
     color:red;
     position: absolute;
     top: 210px;
-    left: 140px;
+    left: 220px;
     width: 200px;
     background-color: floralwhite;
     color: blue;
     padding-left: .8em;
 
 }
+
+.myButton {
+    background-color:#000000;
+    -moz-border-radius:28px;
+    -webkit-border-radius:28px;
+    border-radius:28px;
+    border:1px solid #324a35;
+    display:inline-block;
+    cursor:pointer;
+    color:#fafafa;
+    font-family:Arial;
+    font-size:17px;
+    padding:16px 31px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #40523d;
+}
+.myButton:hover {
+    background-color:#555c51;
+}
+.myButton:active {
+    position:relative;
+    top:1px;
+}
+
 
 
 
