--- a/src/main/webapp/css/numguessstyle.css
+++ b/src/main/webapp/css/numguessstyle.css
@@ -98,7 +98,7 @@ h1 {
     left: 220px;
     width: 200px;
     background-color: floralwhite;
-    color: blue;
+    color: #000000;
     padding-left: .8em;
 
 }
